fixed nav bar overflow

--- a/stylesheets/shared/navbar.css
+++ b/stylesheets/shared/navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     justify-content: flex-end;
     align-items: center;
     z-index: 1;
